# fastlimits

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-docs.txt  requirements-test.txt  requirements.txt  sitemap.xml
.github/workflows/: test.yml
api-refrence/dependencies/: index.html
api-refrence/exceptions/: index.html
api-refrence/functions/: index.html
api-refrence/limiter/: index.html
api-refrence/middleware/: index.html
api-refrence/types/: index.html
api-refrence/utils/: index.html
docs/: examples.md  index.md
docs/api-refrence/: decorators.md  dependencies.md  exceptions.md  functions.md  limiter.md  middleware.md  types.md  utils.md
docs/examples/: limit_all_routes.py  limit_router.py  limit_simple.py
docs/user-guide/: filters.md  getting-started.md  install.md  keys.md  middlewares.md  why.md
examples/: index.html  limit_with_security.py
fastlimiter/: __init__.py  decorators.py  dependencies.py  exceptions.py  limiter.py  middleware.py  types.py  utils.py
fastlimits/: functions.py  limiter.py  middleware.py  utils.py
search/: search_index.json
tests/: __init__.py  test_dependencies.py  test_dependency.py  test_import.py  test_limiter.py  test_utils.py
user-guide/examples/: index.html
user-guide/filters/: index.html
user-guide/getting-started/: index.html
user-guide/install/: index.html
user-guide/keys/: index.html
user-guide/middlewares/: index.html
user-guide/why/: index.html
