[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "fastlimiter"
dynamic = ["version"]
description = "FastLimiter is a rate-limiter extensions/middleware for FastAPI applications"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Sina Ebrahimi", email = "ebrahimisina78@gmail.com" },
]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Framework :: FastAPI",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 1",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "limits>=3.13.0",
    "fastapi>=0.115.0,<1.0.0",
]

[project.urls]
Homepage = "https://github.com/astronuttt/fastlimiter"
Documentation = "https://astronuttt.github.io/fastlimiter/"
Repository = "https://github.com/astronuttt/fastlimiter"
Issues = "https://github.com/astronuttt/fastlimiter/issues"

[project.optional-dependencies]
async-redis = [
    "limits[async-redis]>=3.13.0"
]
async-memcached = [
    "limits[async-memcached]>=3.13.0"
]
async-mongodb = [
    "limits[async-mongodb]>=3.13.0"
]
async-etcd = [
    "limtis[async-etcd]>=3.13.0"
]

[tool.pdm]
version = { source = "file", path = "fastlimiter/__init__.py" }
distribution = true

[tool.pdm.build]
source-includes = [
    "tests/",
    "docs/",
    "requirements*.txt",
    ]

[tool.mypy]
strict = true

# [[tool.mypy.overrides]]
# module = "fastapi.concurrency"
# warn_unused_ignores = false
# ignore_missing_imports = true
# 
# [[tool.mypy.overrides]]
# module = "fastapi.tests.*"
# ignore_missing_imports = true
# check_untyped_defs = true
# 
# [[tool.mypy.overrides]]
# module = "docs_src.*"
# disallow_incomplete_defs = false
# disallow_untyped_defs = false
# disallow_untyped_calls = false

[tool.pytest.ini_options]
addopts = [
  "--strict-config",
  "--strict-markers",
  "--ignore=docs",
]
xfail_strict = true
junit_family = "xunit2"

[tool.coverage.run]
parallel = true
data_file = "coverage/.coverage"
source = [
    "docs_src",
    "tests",
    "fastapi"
]
context = '${CONTEXT}'
dynamic_context = "test_function"

[tool.coverage.report]
show_missing = true
sort = "-Cover"

[tool.coverage.html]
show_contexts = true


[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true
